# findingmodels

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  PROJECT_SPECIFICATION.md  README.md  TODO.md  ids.json  index.json  index.jsonl  index.md  organization.jsonl  organizations.jsonl  package.json  people.jsonl  pyproject.toml  requirements.txt
.husky/: pre-commit
agents/: __init__.py  attribute_classifier.py  attribute_data_merger.py  attribute_merger.py  create_agent.py  formatting_agents.py  hood_agent.py  merge_agent.py  merge_agents.py  prompts.py  review_agent.py  single_agent.py  specificity_agents.py
bhatia_defs/: anterior_communicating_artery.fm.json  aortic_arch_variant.fm.json  arterial_flow_void.fm.json  arterial_stenosis.fm.json  arteriovenous_malformation.fm.json  brain_parenchymal_abnormality.fm.json  burr_hole.fm.json  calvarial_fracture.fm.json  cerebral_atrophy.fm.json  cerebral_parenchymal_hypoattenuation.fm.json  cervical_lymphadenopathy.fm.json  cervical_spondylosis.fm.json  common_carotid_artery_stenosis.fm.json  craniotomy.fm.json  detectable_internal_jugular_vein.fm.json  diffusion_restriction.fm.json  embolization_material.fm.json  encephalomalacia.fm.json  external_carotid_artery_stenosis.fm.json  extra_axial_collection.fm.json  extra_axial_hemorrhage.fm.json  extracranial_abnormality.fm.json  gliosis.fm.json  heterogeneous_brain_parenchymal_hyperattenuation.fm.json  hyperdense_area.fm.json  hyperdense_blood_products.fm.json  internal_carotid_artery_stenosis.fm.json  intracranial_abnormality.fm.json  intracranial_mass_effect.fm.json  (+31 more)
(+6289 files in other folders)
